# hackatecRegional

./: README.md
salud-mental-app/: .env.example  .gitignore  README.md  env.example
salud-mental-app/backend/: .env.example  pyproject.toml  requirements.txt  uvicorn.ini
salud-mental-app/backend/app/: main.py
salud-mental-app/backend/app/ai/: settings.py
salud-mental-app/backend/app/ai/chains/: crisis_flow.py  empathetic_chat.py
salud-mental-app/backend/app/ai/prompts/: escalation_templates.txt  guardrails_bloqueo.txt  system_sano.txt
salud-mental-app/backend/app/core/: config.py  deps.py  security.py
salud-mental-app/backend/app/db/: indexes.py  mongo.py
salud-mental-app/backend/app/models/: ads.py  alert.py  appointment.py  assessment.py  content.py  message.py  therapist.py  user.py
salud-mental-app/backend/app/routes/: ads.py  ai.py  appointments.py  assessments.py  auth.py  chat.py  content.py  directory.py  flows.py  notifications.py  sos.py  therapists.py  triage.py  users.py
salud-mental-app/backend/app/services/: ads_decider.py  auth_service.py  chatbot_service.py  emergency_line.py  fcm_apns.py  risk_engine.py  scheduler.py  scoring_dass21.py  stt_tts.py  typing.py
salud-mental-app/backend/app/sockets/: chat_ws.py
salud-mental-app/backend/app/tasks/: jobs.py  worker.py
salud-mental-app/backend/app/telemetry/: logging.py  otel.py
salud-mental-app/backend/app/tests/: conftest.py  test_appointments.py  test_assessments.py  test_auth.py  test_dass21.py  test_risk_engine.py  test_sos.py  test_therapists_directory.py  test_triage_ads.py
(+39 files in other folders)
